Grace/tests/gibbs/errors/t060.grace
// ERROR = P1023
var a := 42
print("6*9 = ", a :)
